# CasanovoGui

./: Dockerfile  docker-compose.yaml  home.py  pyproject.toml  requirements.txt  simple_db.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: dockerhub.yaml  pylint.yml  python-package.yml
.streamlit/: config.toml
pages/: evaluate.py  models.py  search.py  spectra.py  viewer.py
src/casanovogui/: __init__.py  advanced_db.py  configure.py  dialogs.py  home.py  login.py  model.py  run.py  search.py  simple_db.py  utils.py  version.py  viewer.py
src/casanovogui/pages/: configure.py  evaluate.py  model.py  search.py  spectra.py  viewer.py
src/casanovogui/static/: default_config.yaml
src/casanovogui/streamlit_app/: home.py  run.py  utils.py
src/casanovogui/streamlit_app/pages/: models.py  search.py  spectra.py  viewer.py
