[build-system]
requires = ["setuptools"]

[project]
name = "casanovogui"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
description = "A spectacularly simple package for working with peptide sequences."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit",
    "pandas",
    "plotly",
    "peptacular==2.1.0",
    "pyteomics",
    "numpy",
    "tinydb",
    "pydantic",
    "casanovo~=4.2.0",
    "platformdirs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "casanovogui.__version__"}


[tool.pylint.messages_control]
max-line-length = 120

[project.scripts]
casanovogui = "casanovogui.run:main"
